Fix overflow of notes if large description is provided

--- a/notes-client/src/components/Notes/Grid.css
+++ b/notes-client/src/components/Notes/Grid.css
@@ -2,6 +2,6 @@
 	display: grid;
 
 	grid-template-rows: 1fr;
-	grid-template-columns: auto;
-	grid-auto-flow: column;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-auto-flow: row;
 }
