--- a/notes-client/src/components/Notes/Note.css
+++ b/notes-client/src/components/Notes/Note.css
@@ -1,7 +1,9 @@
 .note-grid {
     margin-left: 5%;
-    width: 90%;
-    height: auto;
-    background-color: aliceblue;
-    color: black;
+    margin-bottom: 5%;
+    width: 95%;
+    height: 200px;
+    overflow: scroll;
+    background-color: #e8fffa;
+    color: #000000;
 }
